fixed mobile view pictures getting cut off

--- a/src/components/Aircraft/AircraftView.scss
+++ b/src/components/Aircraft/AircraftView.scss
@@ -135,7 +135,7 @@
         height:auto;
         width: 100%;
         grid-template-columns: 100%;
-        grid-template-rows:  200px auto auto;
+        grid-template-rows:  auto auto auto;
 
         & > img{
             height: 100%;
