--- a/src/components/Weapon/WeaponView.scss
+++ b/src/components/Weapon/WeaponView.scss
@@ -146,7 +146,7 @@
         height:auto;
         width: 100%;
         grid-template-columns: 100%;
-        grid-template-rows:  200px auto auto;
+        grid-template-rows:  auto auto auto;
 
         & > img{
             height: 100%;
